--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ header{
     left: 0;
     z-index: 999;
     background-color: #fff;
+    height: 150px;
 }
 
 .izquierda{
@@ -59,7 +60,8 @@ nav a{
     height: 40px;
 }
 .central{
-    
+    width: 100%;
+
 }
 .central img{
     width: 100%;     
@@ -75,8 +77,7 @@ nav a{
     .navegacion{
         display: flex;
         flex-direction: column;
-    }
-       
+    }       
     .izquierda{
         order: 2;
     }
